Quiz repository, models, domain, plugins and route

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ logback_version=1.2.11
 ktorm_version=3.4.1
 sql_conn_version=8.0.25
 kmongo_version=4.9.0
+development=true
 kotlin.code.style=official
